# arrays

./: Array.h  CMakeLists.txt  FactorArray.cxx  FactorArray.h  MatrixArray.cxx  MatrixArray.h  README.md  SingleArray.cxx  SingleArray.h  VectorArray.cxx  VectorArray.h  main.cxx
